--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
