--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 ---
 server:
-  port: 9003
+  port: 9002
 
 security:
   basic:
@@ -8,9 +8,9 @@ security:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/amisoft  #your database url. Replace "xxx.x.x.x" with your ip address.
-    username: root #database schema user name
-    password: root #database schema password
+    url: ${oauth.database.url}  #your database url. Replace "xxx.x.x.x" with your ip address.
+    username: ${oauth.database.username} #database schema user name
+    password: ${oauth.database.password} #database schema password
   jpa:
     show-sql: true
     hibernate:
@@ -34,7 +34,8 @@ zuul:
   routes:
     amisoft:
          path: /amisoft/**
-         serviceId: amisoft-service-welcome
+         serviceId: amisoft-secure-resource
+
 
 
 
